--- a/package.json
+++ b/package.json
@@ -13,7 +13,20 @@
     "start": "node dist/index.js",
     "test": "echo \"Tests will be added in M01_S02\" && exit 0",
     "lint": "eslint src/**/*.ts",
-    "clean": "rm -rf dist"
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "clean": "rm -rf dist",
+    "prebuild": "npm run clean",
+    "prepack": "npm run build",
+    "prepublishOnly": "npm run validate-release",
+    "publish:current": "npm run build && npm publish",
+    "validate-release": "node scripts/validate-release.js",
+    "version:patch": "npm version patch --no-git-tag-version",
+    "version:minor": "npm version minor --no-git-tag-version", 
+    "version:major": "npm version major --no-git-tag-version",
+    "release:patch": "npm run version:patch && npm run build && npm publish",
+    "release:minor": "npm run version:minor && npm run build && npm publish",
+    "release:major": "npm run version:major && npm run build && npm publish",
+    "release:dry-run": "npm run validate-release && npm publish --dry-run"
   },
   "keywords": [
     "mcp",
@@ -24,6 +37,24 @@
   ],
   "author": "bagaking",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bagaking/projmcp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bagaking/projmcp/issues"
+  },
+  "homepage": "https://github.com/bagaking/projmcp#readme",
+  "files": [
+    "dist/**/*",
+    "README.md",
+    "LICENSE",
+    "CHANGELOG.md"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
     "zod": "^3.22.4"
